ai micro service

--- a/ai-service/ai/main.ipynb
+++ b/ai-service/ai/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -289,53 +289,53 @@
      "text": [
       "Task: Install a new HVAC system in the warehouse.\n",
       "Assigned Technician: Henry Mcdaniel\n",
-      "Suitability: 0.00%\n",
+      "Suitability: 2.00%\n",
       "Technician Capabilities: Adept at installing and maintaining building automation systems, including HVAC, lighting, and security controls.\n",
       "\n",
       "Task: Repair the broken air conditioning unit in the lobby.\n",
-      "Assigned Technician: Scott Ellis\n",
-      "Suitability: 7.00%\n",
-      "Technician Capabilities: Experienced in flooring installation and repair, specializing in hardwood, laminate, and tile floors.\n",
+      "Assigned Technician: Wayne Bailey\n",
+      "Suitability: 3.00%\n",
+      "Technician Capabilities: Experienced in the maintenance of aquaculture systems, including fish tanks and breeding setups.\n",
       "\n",
       "Task: Fix the leaking water pipe in the basement.\n",
-      "Assigned Technician: Christine Morgan\n",
-      "Suitability: 2.00%\n",
-      "Technician Capabilities: Specialist in water filtration systems, capable of installing and maintaining residential and commercial water purification solutions.\n",
+      "Assigned Technician: Amy Flores\n",
+      "Suitability: 7.00%\n",
+      "Technician Capabilities: Knowledgeable in the installation of solar water heating systems, providing sustainable hot water solutions.\n",
       "\n",
       "Task: Upgrade the electrical system in the office building.\n",
-      "Assigned Technician: Ebony Graham\n",
-      "Suitability: 2.00%\n",
-      "Technician Capabilities: Experienced in the setup of remote work environments, including network configurations and ergonomic office solutions.\n",
+      "Assigned Technician: Henry Mcdaniel\n",
+      "Suitability: 0.00%\n",
+      "Technician Capabilities: Adept at installing and maintaining building automation systems, including HVAC, lighting, and security controls.\n",
       "\n",
       "Task: Install new carpeting in the conference room.\n",
-      "Assigned Technician: Brian Hanson\n",
-      "Suitability: 7.00%\n",
-      "Technician Capabilities: Skilled in installing and maintaining complex plumbing systems, including emergency repairs and new installations.\n",
+      "Assigned Technician: Jordan Fletcher\n",
+      "Suitability: 1.00%\n",
+      "Technician Capabilities: Specialist in electronic circuit design, including prototyping, testing, and troubleshooting electronic systems.\n",
       "\n",
       "Task: Repair the faulty fire alarm system in the warehouse.\n",
-      "Assigned Technician: Michael Leon\n",
+      "Assigned Technician: Michael Barnes\n",
       "Suitability: 0.00%\n",
-      "Technician Capabilities: Expert in the repair and installation of commercial ventilation systems, ensuring optimal air quality and comfort.\n",
+      "Technician Capabilities: Specialist in configuring and repairing smart home devices, including voice assistants and smart locks.\n",
       "\n",
       "Task: Service the backup generator in the utility room.\n",
       "Assigned Technician: Heather Perez\n",
-      "Suitability: 10.00%\n",
+      "Suitability: 1.00%\n",
       "Technician Capabilities: Experienced in telecommunications, including the installation and maintenance of telephony systems and internet connections.\n",
       "\n",
       "Task: Install new LED lighting in the parking lot.\n",
-      "Assigned Technician: Henry Mcdaniel\n",
-      "Suitability: 2.00%\n",
-      "Technician Capabilities: Adept at installing and maintaining building automation systems, including HVAC, lighting, and security controls.\n",
+      "Assigned Technician: Wayne Bailey\n",
+      "Suitability: 0.00%\n",
+      "Technician Capabilities: Experienced in the maintenance of aquaculture systems, including fish tanks and breeding setups.\n",
       "\n",
       "Task: Fix the broken door lock in the storage area.\n",
-      "Assigned Technician: Mario Fowler\n",
-      "Suitability: 3.00%\n",
-      "Technician Capabilities: Certified in renewable energy systems, with expertise in wind and solar energy installations and maintenance.\n",
+      "Assigned Technician: Wayne Bailey\n",
+      "Suitability: 6.00%\n",
+      "Technician Capabilities: Experienced in the maintenance of aquaculture systems, including fish tanks and breeding setups.\n",
       "\n",
       "Task: Inspect and service the ventilation system in the factory.\n",
-      "Assigned Technician: Whitney Collins\n",
-      "Suitability: 1.00%\n",
-      "Technician Capabilities: Expert in wind turbine maintenance, capable of performing routine inspections and repairs to maximize efficiency.\n",
+      "Assigned Technician: Ashley Rosales\n",
+      "Suitability: 0.00%\n",
+      "Technician Capabilities: Proficient in the setup and maintenance of aquariums, including freshwater and marine systems.\n",
       "\n"
      ]
     }
@@ -385,6 +385,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['label_encoder.joblib']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Train the model (as given in the initial code)\n",
+    "# ...\n",
+    "\n",
+    "# Save the RandomForestClassifier model\n",
+    "joblib.dump(model, 'random_forest_model.joblib')\n",
+    "\n",
+    "# Save the TfidfVectorizer\n",
+    "joblib.dump(vectorizer, 'tfidf_vectorizer.joblib')\n",
+    "\n",
+    "# Save the LabelEncoder\n",
+    "joblib.dump(label_encoder, 'label_encoder.joblib')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -406,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
